k8s/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ekonstat
  labels:
    app: postgres
    app.kubernetes.io/part-of: ekonstat
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
