k8s/03-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ekonstat
  labels:
    app: api-server
    app.kubernetes.io/part-of: ekonstat
spec:
  type: ClusterIP
  selector:
    app: api-server
  ports:
    - port: 8080
      targetPort: 8080
